# PARPHOM

./: .gitignore  .gitignore.swp  Makefile  README.md
FORCE_CONSTANTS/: README.md  __init__serial.py
Force_Constant_Generation/: Doxyfile  Makefile.doxygen  README.md  distribute_lists.py  get_force_constant.py  iofile.py
Phonon_Calculations/: COMPILE.sh  Doxyfile  Makefile.amd  Makefile.intel  PhonFreq  PhonFreq_cray  convert_to_ij.f90  create_dynamical_matrix.f90  dynamical_matrix.f90  generate_k_points.py  inp.dat.tblg_0.93  inp.dat.tblg_1.08  inp.dat.tblg_2.9  inp.dat.tblg_7.3  inp.dat_2X1X1  inp.dat_3X1  inp.dat_3X3  inp.dat_QTM  inp.dat_graphene  inp.dat_sa3X3  job_script_1.08tblg  job_script_2.9tblg  job_script_2X1  job_script_7.3tblg  job_script_cray  job_script_sa  plot_gamma_m.py  read_input.f90  read_q_points.f90  reading_lammps_data.f90
SRC/: block_cyclic.f90  convert_to_ij.f90  diagonalize.f90  (+11 more)
Utilities/: MANIFEST.in  Makefile  README.md  bz_integration.f90  calculate_dos.py  calculate_dos_package.py  find_onsite.py  gen_band_kpt.py  gen_dos_kpt.py  interlayer_test.py  neighbor_list.f90  plot_bands.py  plot_strain.ipynb  pymelecutil.py  pyproject.toml  read_k_file.py  requirements.txt  setup.py  strain.py  test_script.py
Utilities/Examples/: README.md  compare.py  dos.data  dos.py  dos_15X15_gauss.data  gen_dos_q_pt.py  get_band_q_pt.py  transport_dos.py
Utilities/pyphutil/: __init__.py  distribute_lists.py  finite_temperature.py  plot_figures.py  progress.py  pyphutil.py
Utilities/pyphutil/fortran_routines/: bz_integration.f90  bz_integration.mod
(+88 files in other folders)
